# mj_surena

./: .gitignore  CMakeLists.txt  surena.py
Model/: surenaV.urdf  surenaV.xml
cmake/: Findmujoco.cmake
include/surena_sim/: surena_sim.h
src/: simulation.cpp  surena_sim.cpp
trajectory_generation/: Ankle.py  DCM.py
